# osoh

./: Cargo.toml  LICENSE  ReadME.md
crates/rpc-client/: Cargo.toml
crates/rpc-codec/: Cargo.toml
crates/rpc-codec/benches/: codec_benchmark.rs
crates/rpc-codec/src/: lib.rs
crates/rpc-codec/src/codec/: bincode.rs  config.rs  json.rs  mod.rs  optimize.rs  traits.rs
crates/rpc-codec/src/error/: builder.rs  conversion.rs  mod.rs  types.rs  validation.rs
crates/rpc-codec/src/protocol/: constants.rs  envelope.rs  messages.rs  methods.rs  mod.rs  types.rs  utils.rs
crates/rpc-codec/src/routing/: context.rs  dispatcher.rs  handler.rs  mod.rs  registry.rs
crates/rpc-io/: Cargo.toml  ReadME.md
crates/rpc-io/src/: connection.rs  error.rs  framer.rs  lib.rs  reader.rs  traits.rs  types.rs  writer.rs
crates/rpc-transport/: Cargo.toml
crates/rpc-transport/examples/: README.md  basic_test.rs  transport_demo.rs
crates/rpc-transport/src/: config.rs  connection.rs  error.rs  lib.rs  multiplexing.rs  protocol.rs  stream.rs  traits.rs
