[workspace]
resolver = "2"
members = [
    "crates/rpc-codec",
    "crates/rpc-transport",
    "crates/rpc-io",
    "crates/rpc-client",
    "crates/rpc-server",
    "crates/geyser-plugin",
]

[workspace.dependencies]
# Shared dependencies across all crates
bincode = { version = "2", features = ["serde"] }
io-uring = "0.7.10"
quinn = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.143"
url = "2.5"
lz4_flex = "0.11.5"
tokio-test = "0.4"
async-trait = "0.1.89"
uuid = { version = "1.18.0", features = ["v4"] }
thiserror = "2.0.16"
rustls = "0.23.31"
bytes = "1.10.1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
