[package]
name = "rpc-codec"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
url = { workspace = true }
lz4_flex = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tokio-test = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
prost = "0.12" # Add this here for the test

[build-dependencies]
prost-build = "0.12" # Add this here for the build script
