[package]
name = "rpc-io"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, optional = true, features = ["io-util"] }
thiserror = { workspace = true }
tokio-uring = { version = "0.5.0", optional = true }
io-uring = { version = "0.7.10", optional = true }
async-trait = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }

[features]
default = ["tokio"]
tokio-runtime = ["tokio"]
io-uring-runtime = ["tokio-uring", "io-uring"]

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
